// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Sort /> Should Sort render correctly 1`] = `
<form
  action="#"
  className="places__sorting"
  method="get"
>
  <span
    className="places__sorting-caption"
  >
    Sort by
  </span>
  <span
    className="places__sorting-type"
    onClick={[Function]}
    tabIndex={0}
  >
    Popular
    <svg
      className="places__sorting-arrow"
      height="4"
      width="7"
    >
      <use
        xlinkHref="#icon-arrow-select"
      />
    </svg>
  </span>
  <ul
    className="places__options places__options--custom "
  >
    <li
      className="places__option "
      data-sort="default"
      onClick={[Function]}
      tabIndex={0}
    >
      Popular
    </li>
    <li
      className="places__option "
      data-sort="price-up"
      onClick={[Function]}
      tabIndex={0}
    >
      Price: low to high
    </li>
    <li
      className="places__option "
      data-sort="price-down"
      onClick={[Function]}
      tabIndex={0}
    >
      Price: high to low
    </li>
    <li
      className="places__option "
      data-sort="rating-down"
      onClick={[Function]}
      tabIndex={0}
    >
      Top rated first
    </li>
  </ul>
</form>
`;

exports[`<Sort /> Should Sort render correctly 2`] = `
<form
  action="#"
  className="places__sorting"
  method="get"
>
  <span
    className="places__sorting-caption"
  >
    Sort by
  </span>
  <span
    className="places__sorting-type"
    onClick={[Function]}
    tabIndex={0}
  >
    Popular
    <svg
      className="places__sorting-arrow"
      height="4"
      width="7"
    >
      <use
        xlinkHref="#icon-arrow-select"
      />
    </svg>
  </span>
  <ul
    className="places__options places__options--custom places__options--opened"
  >
    <li
      className="places__option "
      data-sort="default"
      onClick={[Function]}
      tabIndex={0}
    >
      Popular
    </li>
    <li
      className="places__option "
      data-sort="price-up"
      onClick={[Function]}
      tabIndex={0}
    >
      Price: low to high
    </li>
    <li
      className="places__option "
      data-sort="price-down"
      onClick={[Function]}
      tabIndex={0}
    >
      Price: high to low
    </li>
    <li
      className="places__option "
      data-sort="rating-down"
      onClick={[Function]}
      tabIndex={0}
    >
      Top rated first
    </li>
  </ul>
</form>
`;

exports[`<Sort /> Should Sort render correctly 3`] = `
<form
  action="#"
  className="places__sorting"
  method="get"
>
  <span
    className="places__sorting-caption"
  >
    Sort by
  </span>
  <span
    className="places__sorting-type"
    onClick={[Function]}
    tabIndex={0}
  >
    Price: low to high
    <svg
      className="places__sorting-arrow"
      height="4"
      width="7"
    >
      <use
        xlinkHref="#icon-arrow-select"
      />
    </svg>
  </span>
  <ul
    className="places__options places__options--custom places__options--opened"
  >
    <li
      className="places__option "
      data-sort="default"
      onClick={[Function]}
      tabIndex={0}
    >
      Popular
    </li>
    <li
      className="places__option "
      data-sort="price-up"
      onClick={[Function]}
      tabIndex={0}
    >
      Price: low to high
    </li>
    <li
      className="places__option "
      data-sort="price-down"
      onClick={[Function]}
      tabIndex={0}
    >
      Price: high to low
    </li>
    <li
      className="places__option "
      data-sort="rating-down"
      onClick={[Function]}
      tabIndex={0}
    >
      Top rated first
    </li>
  </ul>
</form>
`;
